Fleshing out all the things and adding in some selection

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-client": "npx esbuild ./Src/Space/Client/map.mts --bundle --outdir=./Src/Space/wwwroot/js/ --sourcemap --minify --splitting --format=esm --watch"
   },
   "author": "",
   "license": "ISC",
